plugins {
    id 'net.fabricmc.fabric-loom-remap' version '1.17.17'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"


// MODMIND DEPENDENCIES START
    modImplementation files('libs/modmind/placeholder-api-2.8.2+1.21.10.jar')
// MODMIND DEPENDENCIES END
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

java {
    withSourcesJar()
}

processResources {
    filteringCharset = 'UTF-8'
    inputs.property 'version', project.version
    filesMatching('fabric.mod.json') { expand version: project.version }
}
